--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "bootstrap-material-design": "~0.3.0",
     "angular-moment": "0.10.2",
     "firebase": "2.2.9",
-    "angularfire": "1.1.2"
+    "angularfire": "1.1.2",
+    "angular-google-places-autocomplete": "0.2.7"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
